fix(shared/components/counter-input): fix input width collapse

--- a/src/app/shared/components/counter-input/counter-input.component.scss
+++ b/src/app/shared/components/counter-input/counter-input.component.scss
@@ -7,7 +7,7 @@
   gap: 0.5rem; // 8px
   padding: 0.5rem; // 8px
   padding-bottom: 0;
-  max-width: 10rem; // 160px
+  width: 10rem; // 160px
 }
 
 .counter-field {
